feat: add default title margins (#1476)
BREAKING CHANGE:
Title mixins and <sbb-title>-component now have a default margin block to meet design specs. In the mixin you can opt out by passing the flag $exclude-spacing with true (e.g. @include text-1($exclude-spacing: true)).
In the sbb-title component you can just set any margin from outside on the <sbb-title> itself, e.g. <sbb-title style='margin:0'>.

--- a/src/components/sbb-card/sbb-card.scss
+++ b/src/components/sbb-card/sbb-card.scss
@@ -126,3 +126,9 @@
 .sbb-card__opens-in-new-window {
   @include sbb.screen-reader-only;
 }
+
+// We remove upper margin from all titles
+// as we do not expect multiple titles to be used inside a card.
+.sbb-card__content ::slotted(sbb-title) {
+  margin-block-start: 0;
+}
