--- a/src/components/sbb-card-product/sbb-card-product.scss
+++ b/src/components/sbb-card-product/sbb-card-product.scss
@@ -133,7 +133,7 @@
 }
 
 .card-product__lead {
-  @include sbb.title-6;
+  @include sbb.title-6($exclude-spacing: true);
 }
 
 .card-product__category,
@@ -142,4 +142,9 @@
 
   margin: 0;
   color: var(--sbb-color-granite-default);
+}
+
+::slotted(sbb-title) {
+  // Overwrite sbb-title default margin
+  margin: 0;
 }
