--- a/src/components/sbb-teaser/sbb-teaser.scss
+++ b/src/components/sbb-teaser/sbb-teaser.scss
@@ -69,6 +69,9 @@
 
 .sbb-teaser__lead {
   @include sbb.clamp-lines($lines: 2);
+
+  // Overwrite sbb-title default margin
+  margin: 0;
 }
 
 .sbb-teaser__description {
