--- a/src/components/sbb-title/sbb-title.scss
+++ b/src/components/sbb-title/sbb-title.scss
@@ -9,6 +9,43 @@
     --sbb-title-text-color-normal-override,
     var(--sbb-color-charcoal-default)
   );
+  --sbb-title-margin-block-start: 0;
+  --sbb-title-margin-block-end: 0;
+
+  margin-block-start: var(--sbb-title-margin-block-start);
+  margin-block-end: var(--sbb-title-margin-block-end);
+}
+
+// stylelint-disable plugin/stylelint-bem-namics
+:host(:where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-start: var(--sbb-spacing-responsive-m);
+  --sbb-title-margin-block-end: var(--sbb-spacing-responsive-s);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='1']:not([visual-level]), [visual-level='1']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-start: var(--sbb-spacing-responsive-l);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='2']:not([visual-level]), [visual-level='2']):where(:not([visually-hidden]))),
+:host(:where([level='3']:not([visual-level]), [visual-level='3']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xxxs);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='4']:not([visual-level]), [visual-level='4']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-3x);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='5']:not([visual-level]), [visual-level='5']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-2x);
+}
+
+// Due to using :where, order does matter
+:host(:where([level='6']:not([visual-level]), [visual-level='6']):where(:not([visually-hidden]))) {
+  --sbb-title-margin-block-end: var(--sbb-spacing-fixed-1x);
 }
 
 :host([negative]) {
@@ -16,8 +53,9 @@
 }
 
 .sbb-title {
-  color: var(--sbb-title-text-color-normal);
   @include sbb.font-smoothing;
+
+  color: var(--sbb-title-text-color-normal);
 
   :host([visually-hidden]) & {
     @include sbb.screen-reader-only;
@@ -27,29 +65,28 @@
     @include sbb.scroll-margin-block-start;
   }
 
-  // stylelint-disable plugin/stylelint-bem-namics
   :host(:is([level='1']:not([visual-level]), [visual-level='1'])) & {
-    @include sbb.title-1;
+    @include sbb.title-1($exclude-spacing: true);
   }
 
   :host(:is([level='2']:not([visual-level]), [visual-level='2'])) & {
-    @include sbb.title-2;
+    @include sbb.title-2($exclude-spacing: true);
   }
 
   :host(:is([level='3']:not([visual-level]), [visual-level='3'])) & {
-    @include sbb.title-3;
+    @include sbb.title-3($exclude-spacing: true);
   }
 
   :host(:is([level='4']:not([visual-level]), [visual-level='4'])) & {
-    @include sbb.title-4;
+    @include sbb.title-4($exclude-spacing: true);
   }
 
   :host(:is([level='5']:not([visual-level]), [visual-level='5'])) & {
-    @include sbb.title-5;
+    @include sbb.title-5($exclude-spacing: true);
   }
 
   :host(:is([level='6']:not([visual-level]), [visual-level='6'])) & {
-    @include sbb.title-6;
+    @include sbb.title-6($exclude-spacing: true);
   }
   // stylelint-enable plugin/stylelint-bem-namics
 }
