--- a/src/global/styles/mixins/typo.scss
+++ b/src/global/styles/mixins/typo.scss
@@ -2,10 +2,19 @@
 // Typo: Title Style Mixins
 // ----------------------------------------------------------------------------------------------------
 
-@mixin title {
+@mixin title($exclude-spacing: false) {
   --sbb-title-line-height: var(--sbb-typo-line-height-titles);
+  --sbb-title-margin-block-start: 0;
+  --sbb-title-margin-block-end: 0;
+
+  @if not($exclude-spacing) {
+    --sbb-title-margin-block-start: var(--sbb-spacing-responsive-m);
+    --sbb-title-margin-block-end: var(--sbb-spacing-responsive-s);
+  }
 
   margin: 0;
+  margin-block-start: var(--sbb-title-margin-block-start);
+  margin-block-end: var(--sbb-title-margin-block-end);
   font-family: var(--sbb-typo-type-face-sbb-bold);
   font-weight: normal;
   line-height: var(--sbb-title-line-height);
@@ -13,42 +22,62 @@
   font-size: var(--sbb-title-font-size);
 }
 
-@mixin title-1 {
-  @include title;
+@mixin title-1($exclude-spacing: false) {
+  @include title($exclude-spacing);
 
   --sbb-title-font-size: var(--sbb-font-size-title-1);
 }
 
-@mixin title-2 {
-  @include title;
+@mixin title-2($exclude-spacing: false) {
+  @include title($exclude-spacing);
 
   --sbb-title-font-size: var(--sbb-font-size-title-2);
+
+  @if not($exclude-spacing) {
+    --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xxxs);
+  }
 }
 
-@mixin title-3 {
-  @include title;
+@mixin title-3($exclude-spacing: false) {
+  @include title($exclude-spacing);
 
   --sbb-title-font-size: var(--sbb-font-size-title-3);
+
+  @if not($exclude-spacing) {
+    --sbb-title-margin-block-end: var(--sbb-spacing-responsive-xxxs);
+  }
 }
 
-@mixin title-4 {
-  @include title;
+@mixin title-4($exclude-spacing: false) {
+  @include title($exclude-spacing);
 
   --sbb-title-font-size: var(--sbb-font-size-title-4);
+
+  @if not($exclude-spacing) {
+    --sbb-title-margin-block-end: var(--sbb-spacing-fixed-3x);
+  }
 }
 
-@mixin title-5 {
-  @include title;
+@mixin title-5($exclude-spacing: false) {
+  @include title($exclude-spacing);
 
   --sbb-title-font-size: var(--sbb-font-size-title-5);
   --sbb-title-line-height: var(--sbb-typo-line-height-body-text);
+
+  @if not($exclude-spacing) {
+    --sbb-title-margin-block-end: var(--sbb-spacing-fixed-2x);
+  }
 }
 
-@mixin title-6 {
-  @include title;
+@mixin title-6($exclude-spacing: false) {
+  @include title($exclude-spacing);
 
   --sbb-title-font-size: var(--sbb-font-size-title-6);
   --sbb-title-line-height: var(--sbb-typo-line-height-body-text);
+
+  @if not($exclude-spacing) {
+    --sbb-title-margin-block-end: var(--sbb-spacing-fixed-1x);
+  }
 }
 
 @mixin title--negative {
