--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -11,12 +11,13 @@
   --sbb-navigation-marker-position-x: var(--sbb-spacing-fixed-1x);
   --sbb-navigation-marker-position-y: unset;
   --sbb-navigation-marker-width: #{sbb.px-to-rem-build(17)};
-  --sbb-navigation-marker-height: var(--sbb-border-width-1x);
+  --sbb-navigation-marker-border: var(--sbb-border-width-1x);
   --sbb-navigation-marker-padding-inline-start: var(--sbb-spacing-fixed-6x);
   --sbb-navigation-marker-typo-line-height: var(--sbb-typo-line-height-titles);
   --sbb-navigation-margin-inline-start: var(--sbb-spacing-fixed-3x);
   --sbb-navigation-marker-margin-block: calc(
-    1em * var(--sbb-navigation-marker-typo-line-height) / 2 - var(--sbb-border-width-1x) / 2
+    1em * var(--sbb-navigation-marker-typo-line-height) / 2 - var(--sbb-navigation-marker-border) /
+      2
   );
 
   position: relative;
@@ -26,20 +27,19 @@
     content: '';
     position: absolute;
     opacity: 0;
-    left: var(--sbb-navigation-marker-position-x);
-    top: var(--sbb-navigation-marker-position-y);
+    inset-inline-start: var(--sbb-navigation-marker-position-x);
+    inset-block-start: var(--sbb-navigation-marker-position-y);
     width: var(--sbb-navigation-marker-width);
-    height: var(--sbb-navigation-marker-height);
-    background: var(--sbb-color-storm-default);
+    border-block-start: var(--sbb-navigation-marker-border) solid var(--sbb-color-storm-default);
     margin-block: var(--sbb-navigation-marker-margin-block);
     transition: {
       duration: var(--sbb-animation-duration-6x);
       timing-function: ease;
-      property: opacity, top;
+      property: opacity, inset-block-start;
     }
 
     @include sbb.if-forced-colors {
-      background: CanvasText;
+      border-color: CanvasText;
     }
   }
 }
