feat: add link, legend, sub and sup mixins

--- a/src/global/styles/_index.scss
+++ b/src/global/styles/_index.scss
@@ -9,6 +9,7 @@
 @forward './mixins/card';
 @forward './mixins/grid_layout';
 @forward './mixins/helpers';
+@forward './mixins/link';
 @forward './mixins/lists';
 @forward './mixins/panel';
 @forward './mixins/pearl-chain-bullet';
