--- a/src/global/styles/normalize.scss
+++ b/src/global/styles/normalize.scss
@@ -1,4 +1,5 @@
 @use './mixins/helpers';
+@use './mixins/typo';
 
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 
@@ -106,20 +107,12 @@ small {
 Prevent 'sub' and 'sup' elements from affecting the line height in all browsers.
 */
 
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
 sub {
-  bottom: -0.25em;
+  @include typo.sub;
 }
 
 sup {
-  top: -0.5em;
+  @include typo.sup;
 }
 
 /*
