--- a/src/components/sbb-button/sbb-button.scss
+++ b/src/components/sbb-button/sbb-button.scss
@@ -61,7 +61,7 @@
 }
 
 :host([variant='secondary']) {
-  --sbb-button-color-active-background: var(--sbb-color-cloud-default);
+  --sbb-button-color-active-background: var(--sbb-color-milk-default);
   --sbb-button-color-active-border: var(--sbb-color-cloud-default);
   --sbb-button-color-active-text: var(--sbb-color-anthracite-default);
   --sbb-button-color-default-background: var(--sbb-color-white-default);
@@ -70,7 +70,7 @@
   --sbb-button-color-disabled-background: var(--sbb-color-milk-default);
   --sbb-button-color-disabled-border: var(--sbb-color-milk-default);
   --sbb-button-color-disabled-text: var(--sbb-color-platinum-default);
-  --sbb-button-color-hover-background: var(--sbb-color-milk-default);
+  --sbb-button-color-hover-background: var(--sbb-color-white-default);
   --sbb-button-color-hover-border: var(--sbb-color-cloud-default);
   --sbb-button-color-hover-text: var(--sbb-color-iron-default);
   --sbb-button-shadow-1-color: var(--sbb-color-platinum-alpha-20);
@@ -213,7 +213,7 @@
   // If the the device can hover over elements with ease
   @include sbb.hover-mq($hover: true) {
     // stylelint-disable plugin/stylelint-bem-namics
-    :host(:not([disabled])) &:hover {
+    :host(:not([disabled])) &:hover:not(:active) {
       --sbb-button-translate-y-content-hover: #{sbb.px-to-rem-build(-1)};
       --sbb-button-shadow-1-offset-y: calc(
         0.5 * var(--sbb-shadow-elevation-level-3-shadow-1-offset-y)
