--- a/src/components/sbb-header/sbb-header.scss
+++ b/src/components/sbb-header/sbb-header.scss
@@ -6,6 +6,8 @@
 
 :host {
   --sbb-header-logo-height: #{sbb.px-to-rem-build(16)};
+  --sbb-header-padding-inline: var(--sbb-page-base-offset-responsive);
+  --sbb-header-content-max-width: var(--sbb-layout-base-page-max-width);
 
   @include sbb.mq($from: medium) {
     --sbb-header-logo-height: #{sbb.px-to-rem-build(20)};
@@ -19,7 +21,8 @@
   display: block;
   position: fixed;
   inset: 0 0 auto;
-  padding: 0 var(--sbb-page-base-offset-responsive);
+  padding-block: 0;
+  padding-inline: var(--sbb-header-padding-inline);
   background: var(--sbb-color-white-default);
   transition: box-shadow var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
   z-index: 10;
@@ -38,7 +41,7 @@
   margin-inline: auto;
   height: var(--sbb-header-height);
   width: 100%;
-  max-width: var(--sbb-layout-base-page-max-width);
+  max-width: var(--sbb-header-content-max-width);
 }
 
 .sbb-header__logo {
