style: fix for tap on Chrome mobile

--- a/src/components/sbb-tag/sbb-tag.scss
+++ b/src/components/sbb-tag/sbb-tag.scss
@@ -20,6 +20,7 @@
 
   display: inline-block;
   max-width: 100%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* stylelint-disable plugin/stylelint-bem-namics */
