--- a/_index.scss
+++ b/_index.scss
@@ -1,1 +1,2 @@
-@forward 'src/global/styles/_index' hide development-style, host-component-properties;
+@forward 'src/global/styles/_index' hide development-style, host-component-properties, link-base,
+  link-focus-visible, link-hover, link-active, link-inline-base, link-inline-consolidation;
