--- a/src/global/styles/mixins/link.scss
+++ b/src/global/styles/mixins/link.scss
@@ -4,47 +4,89 @@
 @use './a11y';
 @use '../core/mediaqueries';
 
-%link-inline-core {
+@mixin link-variables {
+  --sbb-link-color-normal: var(--sbb-color-granite-default);
+  --sbb-link-color-hover: var(--sbb-color-red125-default);
+  --sbb-link-color-active: var(--sbb-color-red150-default);
+  --sbb-link-text-decoration: none;
+
+  @include a11y.if-forced-colors {
+    --sbb-link-text-decoration: underline;
+  }
+}
+
+@mixin link-variables--negative() {
+  --sbb-link-color-normal: var(--sbb-color-white-default);
+  --sbb-link-color-hover: var(--sbb-color-cloud-default);
+  --sbb-link-color-active: var(--sbb-color-silver-default);
+  --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
+}
+
+@mixin link-variables--inline() {
+  --sbb-link-color-normal: inherit;
+  --sbb-link-text-decoration: underline;
+}
+
+@mixin link-variables--inline-negative {
+  --sbb-link-color-hover: var(--sbb-color-graphite-default);
+  --sbb-link-color-active: var(--sbb-color-metal-default);
+  --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
+}
+
+@mixin link-base {
+  color: var(--sbb-link-color-normal);
+  text-decoration: var(--sbb-link-text-decoration);
+}
+
+@mixin link-inline-base {
   @include typo.text-inherit;
+}
 
-  color: inherit;
-  text-decoration: underline;
-
+@mixin link-focus-visible {
   &:focus-visible {
     @include a11y.focus-outline;
 
     border-radius: calc(var(--sbb-border-radius-4x) - var(--sbb-focus-outline-offset));
   }
+}
 
+@mixin link-hover {
   @include mediaqueries.hover-mq($hover: true) {
     &:hover {
       color: var(--sbb-link-color-hover);
+      text-decoration: underline;
     }
   }
+}
 
-  // Active definitions have to be after :hover definitions
+@mixin link-active {
   &:active {
     color: var(--sbb-link-color-active);
   }
+}
 
-  @include a11y.if-forced-colors {
-    text-decoration-skip-ink: auto; // -> read more about here https://bit.ly/3BHdTsE
-  }
+@mixin link-inline-consolidation {
+  @include link-base;
+  @include link-inline-base;
+  @include link-focus-visible;
+  @include link-hover;
+
+  // Active definitions have to be after :hover definitions
+  @include link-active;
 }
 
 @mixin link-inline {
-  --sbb-link-color-hover: var(--sbb-color-red125-default);
-  --sbb-link-color-active: var(--sbb-color-red150-default);
-
-  @extend %link-inline-core;
+  @include link-variables;
+  @include link-variables--inline;
+  @include link-inline-consolidation;
 }
 
 @mixin link-inline-negative {
-  --sbb-link-color-hover: var(--sbb-color-graphite-default);
-  --sbb-link-color-active: var(--sbb-color-metal-default);
-  --sbb-focus-outline-color: var(--sbb-focus-outline-color-dark);
-
-  @extend %link-inline-core;
+  // We don't include link-variables and link-variables--negative here
+  // because they are going to be overridden anyways.
+  @include link-variables--inline;
+  @include link-variables--inline-negative;
+  @include link-inline-consolidation;
 }
 
 // stylelint-enable plugin/stylelint-bem-namics
