fix: minor fixes

--- a/src/components/sbb-train-formation/sbb-train-formation.scss
+++ b/src/components/sbb-train-formation/sbb-train-formation.scss
@@ -11,6 +11,8 @@
 }
 
 .sbb-train-formation {
+  @include sbb.scrollbar-light;
+
   margin-block-end: var(--sbb-train-formation-padding);
   display: flex;
   gap: var(--sbb-train-formation-train-gap);
