--- a/src/components/sbb-tag/sbb-tag.scss
+++ b/src/components/sbb-tag/sbb-tag.scss
@@ -13,6 +13,7 @@
   --sbb-tag-amount-color: var(--sbb-color-metal-default);
   --sbb-tag-height: #{sbb.px-to-rem-build(36)};
   --sbb-tag-inset: 0;
+  --sbb-tag-transition: translateY(0);
 
   @include sbb.mq($from: medium) {
     --sbb-tag-height: #{sbb.px-to-rem-build(40)};
@@ -29,10 +30,7 @@
   @include sbb.hover-mq($hover: true) {
     --sbb-tag-background-color: var(--sbb-color-milk-default);
     --sbb-tag-inset: calc(var(--sbb-border-width-2x) * -1);
-
-    .sbb-tag {
-      transform: translateY(calc(var(--sbb-border-width-1x) * -1));
-    }
+    --sbb-tag-transition: translateY(calc(var(--sbb-border-width-1x) * -1));
   }
 }
 /* stylelint-enable plugin/stylelint-bem-namics */
@@ -81,6 +79,7 @@
   cursor: pointer;
   border-radius: var(--sbb-tag-border-radius);
   color: var(--sbb-tag-text-color);
+  transition: color var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
 
   // Pressed state
   &:active {
@@ -97,7 +96,9 @@
     background-color: var(--sbb-tag-background-color);
     border: var(--sbb-tag-border-width) solid var(--sbb-tag-border-color);
     border-radius: var(--sbb-tag-border-radius);
-    transition: all var(--sbb-animation-duration-2x) var(--sbb-animation-easing);
+    transition-duration: var(--sbb-animation-duration-4x);
+    transition-timing-function: var(--sbb-animation-easing);
+    transition-property: inset, background-color, border-color, box-shadow;
   }
 
   :host([disabled]) & {
@@ -127,6 +128,12 @@
   @include sbb.text-xs--regular;
 
   color: var(--sbb-tag-amount-color);
+}
+
+.sbb-tag--shift {
+  transition: transform var(--sbb-animation-duration-4x) var(--sbb-animation-easing);
+  transform: var(--sbb-tag-transition);
+  will-change: transform;
 }
 
 input[type='checkbox'] {
