--- a/src/components/sbb-tooltip-trigger/sbb-tooltip-trigger.scss
+++ b/src/components/sbb-tooltip-trigger/sbb-tooltip-trigger.scss
@@ -5,5 +5,22 @@
 @include sbb.host-component-properties;
 
 :host {
+  --sbb-tooltip-background-hover: #444;
+  --sbb-tooltip-background-active: #5a5a5a;
+
   display: inline-block;
+}
+
+.sbb-tooltip-trigger {
+  @include sbb.button-reset;
+}
+
+.sbb-tooltip-trigger:hover {
+  color: var(--sbb-tooltip-background-hover);
+  cursor: pointer;
+}
+
+.sbb-tooltip-trigger:active {
+  color: var(--sbb-tooltip-background-active);
+  cursor: pointer;
 }
