feat: improve play function on storybook

--- a/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
+++ b/src/components/sbb-navigation-marker/sbb-navigation-marker.scss
@@ -20,6 +20,8 @@
       2
   );
 
+  // TODO: try to refactor removing the style from the host element
+
   position: relative;
   padding-inline-start: var(--sbb-navigation-marker-padding-inline-start);
 
